--- a/demo/application.properties
+++ b/demo/application.properties
@@ -2,3 +2,16 @@ spring.application.name=demo
 aws.access-key=AKIAT3TFTH6KGG3CKCEG
 aws.secret-key=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
 aws.region=ap-south-1
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/nimesa
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# JDBC Driver (Spring Boot usually detects this automatically)
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
