--- a/demo/application.properties
+++ b/demo/application.properties
@@ -3,8 +3,8 @@ aws.access-key=AKIAT3TFTH6KGG3CKCEG
 aws.secret-key=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
 aws.region=ap-south-1
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/nimesa
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=password
 
 # JDBC Driver (Spring Boot usually detects this automatically)
@@ -12,6 +12,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
