--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -73,6 +73,13 @@
 			<artifactId>aws-java-sdk-ec2</artifactId>
 			<version>1.12.118</version>
 		</dependency>
+	
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.8.5</version> 
+</dependency>
+
 	</dependencies>
 
 	<build>
